# testCode

./: .gitignore  .gitmodules  CMakeLists.txt  test02_Swizzle.cpp
Archive/algorithm/: CMakeLists.txt
Archive/web/: build.sh
Archive/web/WebAssembly/: CMakeLists.txt  index.html
Archive/web/WebAssembly/algorithm/: CMakeLists.txt
Interpreter/: CMakeLists.txt  Driver.hpp  VM.cpp  VM.hpp  testVM.cpp
cpp/: CMakeLists.txt  test.cpp  testAssert.hpp  testBasic.hpp  testConstructor.hpp  testCppVersion.hpp  testEnum.hpp  testFramework.hpp  testFuncPt.hpp  testOpencvCalc.hpp  testOpencvDLT.hpp  testOpencvIO.hpp  testOpencvMat.hpp  testOutputImageType.hpp  testReg.py  testSerialize.hpp  testVector.hpp
cppCompile/: A.cpp  A.hpp  B.cpp  B.hpp  CMakeLists.txt  build.sh  main.cpp  util.hpp
cppMerge/: CMakeLists.txt  build.sh  test.cpp  test03_Eigen.cpp  test04_Memory.cpp  test05_UUID.cpp  test06_GeomMath.cpp  test07_Enum.cpp  test08_Misc.cpp  test09_stdptr.cpp  test10_outstr.cpp  test11_chrono.cpp  test12_thread.cpp
cross_platform_lib/: .gitignore  CMakeLists.txt  build.sh  config.hpp.in
cross_platform_lib/cmake/: toolchain-mac-android.cmake  toolchain-mac-ios.cmake
cross_platform_lib/configure/: toolchain-mac-ios.cmake
cross_platform_lib/platformTest/: CMakeLists.txt
cross_platform_lib/platformTest/android/: settings.gradle
cross_platform_lib/platformTest/android/app/: build.gradle
cross_platform_lib/platformTest/android/app/src/androidTest/java/com/example/androidtestmain/: ExampleInstrumentedTest.kt
cross_platform_lib/platformTest/android/app/src/main/: AndroidManifest.xml
cross_platform_lib/platformTest/android/app/src/main/java/com/example/androidtestmain/: MainActivity.kt
cross_platform_lib/platformTest/android/app/src/main/res/values/: strings.xml
cross_platform_lib/platformTest/android/app/src/test/java/com/example/androidtestmain/: ExampleUnitTest.kt
cross_platform_lib/platformTest/android/cpplibmanager/: build.gradle
cross_platform_lib/platformTest/android/cpplibmanager/src/androidTest/java/com/example/cpplibmanager/: ExampleInstrumentedTest.kt
cross_platform_lib/platformTest/android/cpplibmanager/src/main/: AndroidManifest.xml
cross_platform_lib/platformTest/android/cpplibmanager/src/main/java/com/example/cpplibmanager/: CppLibManager.kt  GLRenderer.kt
cross_platform_lib/platformTest/android/cpplibmanager/src/main/res/values/: strings.xml
cross_platform_lib/platformTest/android/gradle/wrapper/: gradle-wrapper.properties
cross_platform_lib/platformTest/desktop/: CMakeLists.txt  debugMain.cpp  unitTestMain.cpp
cross_platform_lib/platformTest/ios/: CMakeLists.txt  Info.plist  ViewController.h  build.sh  main.m
cross_platform_lib/platformTest/ios/iosTestMain/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  ViewController.h  ViewController.m  main.m
cross_platform_lib/platformTest/ios/iosTestMain.xcodeproj/: project.pbxproj
cross_platform_lib/platformTest/ios/iosTestMain.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
cross_platform_lib/platformTest/ios/iosTestMain.xcodeproj/project.xcworkspace/xcuserdata/shen.xcuserdatad/: UserInterfaceState.xcuserstate
cross_platform_lib/platformTest/ios/iosTestMain.xcodeproj/xcshareddata/xcschemes/: iosTestMain.xcscheme
cross_platform_lib/platformTest/ios/iosTestMain.xcodeproj/xcuserdata/shen.xcuserdatad/xcschemes/: xcschememanagement.plist
cross_platform_lib/platformTest/ios/iosTestMain.xcworkspace/: contents.xcworkspacedata
cross_platform_lib/platformTest/ios/iosTestMain.xcworkspace/xcuserdata/shen.xcuserdatad/: UserInterfaceState.xcuserstate  WorkspaceSettings.xcsettings
cross_platform_lib/platformTest/ios/sources/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
cross_platform_lib/platformTest/web/: CMakeLists.txt  webTestMain.html
cross_platform_lib/src/: CMakeLists.txt  cppLib.cpp
cross_platform_lib/src/code/: CMakeLists.txt  cppLib.cpp  cppLib.hpp
cross_platform_lib/src/code/Asset/Shaders/: testShader.metal
cross_platform_lib/src/code/Asset/Shaders/Metal/: testShader.metal
cross_platform_lib/src/code/Asset/Shaders/WebGL/: testShader.frag.glsl  testShader.vert.glsl
cross_platform_lib/src/code/RHI/: CMakeLists.txt
cross_platform_lib/src/code/RHI/Metal/: CMakeLists.txt  MetalRenderer.h  MetalRenderer.mm
cross_platform_lib/src/code/RHI/OpenGL/: CMakeLists.txt  OpenGLRenderer.cpp  OpenGLRenderer.hpp
cross_platform_lib/src/code/RHI/OpenGLES/: CMakeLists.txt  OpenGLESRenderer.cpp  OpenGLESRenderer.hpp
cross_platform_lib/src/public/: CMakeLists.txt  pubCppLib.cpp
cross_platform_lib/src/public/android/: CMakeLists.txt  CppLibManager_jni.cpp  CppLibManager_jni.h
cross_platform_lib/src/public/desktop/: CMakeLists.txt  pubCppLib.cpp
cross_platform_lib/src/public/desktop/include/: pubCppLib.hpp
cross_platform_lib/src/public/include/: pubCppLib.hpp
cross_platform_lib/src/public/ios/: CMakeLists.txt  CppLibManager.mm
cross_platform_lib/src/public/ios/include/: CppLibManager.h
cross_platform_lib/src/public/web/: CMakeLists.txt  CppLibManager.cpp  wasmloader.js
cross_platform_lib/src/public/web/include/: CppLibManager.h
cross_platform_lib/src/unitTests/: CMakeLists.txt  unitTest.cpp  unitTest.hpp
cross_platform_lib/test/: CMakeLists.txt  testAll.cpp
cross_platform_lib/test/desktop/: CMakeLists.txt  testMain.cpp
cross_platform_lib/test/ios/: AppDelegate.m
cross_platform_lib/test/src/: CMakeLists.txt  testAll.cpp  testAll.hpp
geo/: .gn  BUILD.gn  CMakeLists.txt  main.cpp  spa.cpp  spa.h
geo/gn_build/config/: BUILDCONFIG.gn
geo/gn_build/toolchain/: BUILD.gn
wasm/hello_world/: hello_world_sdl.cpp
wasm/webgl_cmakeSDL/: BaseApplication.cpp  BaseApplication.hpp  CMakeLists.txt  GraphicsManager.cpp  GraphicsManager.hpp  OpenGLApplication.cpp  SdlApplication.cpp  SdlApplication.hpp  build.sh  main.cpp
wasm/webgl_glbook/: CMakeLists.txt  Makefile
wasm/webgl_glbook/Chapter_2/Hello_Triangle/: CH02_HelloTriangle.bc  CH02_HelloTriangle.html  CH02_HelloTriangle.js  CH02_HelloTriangle.wasm
(+1 files in other folders)
